# tw

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  README.md
.claude/: settings.json
.claude/skills/ci-do/: SKILL.md
.claude/skills/run-tw-bake/: SKILL.md  smoke.sh
.claude/skills/run-tw-sim/: SKILL.md  driver.py
.claude/skills/run-tw-unreal/: SKILL.md
.claude/skills/run-tw-visual/: SKILL.md
bake/: Cargo.toml  gen_geo.py
bake/config/: client.yaml  geo.yaml
bake/src/: main.rs
bake/src/geom/: config.rs  forests.rs  geo.rs  mapdata.rs  regions.rs  rivers.rs  terrain.rs
sim/: .gitignore  pyproject.toml
sim/campaign/: balance.yaml  britain.yaml
sim/src/tw_sim/: __init__.py  ai.py  api.py  cli.py  combat.py  command.py  config.py  data.py  diplomacy.py  economy.py  event.py  ids.py  rules.py  server.py  state.py  turn.py  wire.py
sim/tests/: test_campaign.py  test_oracle.py  test_server.py  test_uncovered.py
tools/twctl/: pyproject.toml
tools/twctl/src/twctl/: __init__.py  cli.py
unreal/: TotalWarlike.uproject
unreal/Config/: DefaultEngine.ini
unreal/Content/Map/: forests.json  province_borders.json  provinces.json  rivers.json
unreal/Content/Maps/: Campaign.umap
unreal/Content/Python/: init_unreal.py
unreal/Content/Python/entry/: assets.py  build.py  shot.py
unreal/Content/Python/tests/: test_bridge.py
unreal/Content/Python/tw/: __init__.py  _scene.py  borders.py  (+11 more)
unreal/Scripts/: README.md
unreal/Shaders/: README.md  TerrainCommon.ush  build_terrain_material.py
unreal/Shots/: README.md  diff.py
unreal/Source/: TotalWarlike.Target.cs  TotalWarlikeEditor.Target.cs
unreal/Source/TotalWarlike/: TotalWarlike.Build.cs  TotalWarlike.cpp
unreal/Tests/: wire_test.cpp
(+37 files in other folders)
