[package]
name = "tw-bake"
version = "0.1.0"
edition = "2021"

# Deliberately depends on nothing but serde. The geometry generators in
# src/geom/ are pure functions of `elev.bin` + `client.yaml`, so the whole
# crate builds and runs the full bake in ~12 s from cold.
[[bin]]
name = "bake"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
