[project]
name = "tw-sim"
version = "0.1.0"
description = "The Total Warlike campaign simulation: a pure, engine-independent state machine."
requires-python = ">=3.13"
dependencies = ["pyyaml>=6.0", "msgpack>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tw_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
