[project]
name = "twctl"
version = "0.1.0"
description = "Agent-facing CLI for the tw campaign map: drive the Unreal editor's Python API headlessly or over remote execution."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
twctl = "twctl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twctl"]
